--- a/manuscrit_G_LEFEBVRE/publi_GIST-fr.tex
+++ b/manuscrit_G_LEFEBVRE/publi_GIST-fr.tex
@@ -1111,7 +1111,7 @@ Le temps de doublement~$\Td$ en fonction de~$\muI$ est également monotone, cont
 \includegraphics[width=0.31\textwidth]{possibilites/glivec_inefficace.png}
 }
 \caption{\label{fig:possibilites} 
-\textbf{Différents comportements pris en compte par notre modèle.}
+Différents comportements pris en compte par notre modèle.
 }
 \end{figure}
 
