Ajout paragraphe critere RECIST

--- a/manuscrit_G_LEFEBVRE/main.tex
+++ b/manuscrit_G_LEFEBVRE/main.tex
@@ -311,11 +311,11 @@
 \addcontentsline{toc}{chapter}{Sommaire}
 \tableofcontents    % Table des matières
 
-\specialchap{Avant-propos}
-%\chapter{Avant-propos}
-%\pagestyle{prefacestyle}
-%\renewcommand\chaptername{Avant-Propos}
-\lipsum[1-11]
+%\specialchap{Avant-propos}
+%%\chapter{Avant-propos}
+%%\pagestyle{prefacestyle}
+%%\renewcommand\chaptername{Avant-Propos}
+%\lipsum[1-11]
 
 \specialchap{Introduction}
 %\chapter{Introduction}
