--- a/manuscrit_G_LEFEBVRE/publi_GIST-fr.tex
+++ b/manuscrit_G_LEFEBVRE/publi_GIST-fr.tex
@@ -897,12 +897,14 @@ La fonction~$Y$ definie par\footnote{Notez que si~$e=0$, alors~$Y$ est  invarian
 \end{array}\right.
 \end{equation}
 est ensuite utilisée afin d'imposer la condition initiale~:
-\begin{align}
+\begin{equation}\label{eq:CI}
+\begin{aligned}
 P_1|_{t=0}&=(1-\Sigma_{ini})Y, \quad
 P_2|_{t=0}=\dfrac{\Sigma_{ini}}{1+q_{ini}}Y, \quad
 P_3|_{t=0}=q_{ini}P_2(t=0), \quad N|_{t=0}=0, \\
-M|_{t=0}&=2\Ms,\label{eq:CI}
-\end{align}
+M|_{t=0}&=2\Ms,
+\end{aligned}
+\end{equation}
 où~$\Sigma_{ini}$ représente la proportion de cellules résistantes au traitement~$\TI$ et~$q_{ini}$ est la proportion de cellules~$P_2$
 qui sont aussi résistantes au traitement~$\TS$. Pour \Nber, nous avons choisi~$e=0.35$ et~$r_1=0.47$; $r_2=0.36$.
 
